--- a/app/style/main.css
+++ b/app/style/main.css
@@ -1,24 +1,296 @@
-* {
-    margin: 0;
+:root {
+    --orange: #EB6852;
+    --black: #435363;
+    --blue: #EFF7FE;
+    --dblue: #B3D1ED;
 }
 
 body {
+    font-family: 'Roboto', sans-serif;
+    background-color: var(--blue);
+
+}
+
+.top {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    background-color: white;
+    margin: -5px;
+    border-bottom: 2px solid var(--black);
+    grid-template-areas:
+        "logo logo menu menu"
 }
 
-body > header {
-    grid-column: 2;
-    grid-row: 1;
+.logo {
+    grid-area: logo;
+    align-self: center;
+    text-transform: uppercase;
 }
 
-body > .enter_Address {
-    grid-column: 2;
-    grid-row: 2;
+.logo h1 {
+    margin-left: 5px;
+    display: inline !important;
+    padding: 0.5px;
+    font-size: 30px;
 }
 
-body > footer {
-    grid-column: 2;
-    grid-row: 3;
+
+
+#orange {
+    color: var(--orange);
+}
+
+#black {
+    color: var(--black);
+}
+
+
+.menu {
+    grid-area: menu;
+}
+
+
+.menu ul {
+
+    display: grid;
+    padding: 0;
+    list-style: none;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    overflow: hidden;
+    justify-items: center;
+}
+
+.menu a {
+    text-decoration: none;
+    color: var(--black);
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
+
+
+.middle {
+    display: grid;
+    max-width: 1000px;
+    margin: 200px auto;
+    justify-items: center !important;
+    text-align: center;
+    grid-template-columns: repeat(auto-fit, minmax (auto 1fr));
+    background-color: var(--blue);
+}
+
+.instructions {
+    font-size: 20px;
+    overflow: nowrap;
+    text-align: center;
+}
+
+.middle>* {
+    grid-column: 2/-2;
+}
+
+.address {
+    display: inline-block;
+    align-items: center;
+
+}
+
+.form {
+    float: left;
+
+}
+
+button[type="submit"] {
+    width: 60px;
+    background-repeat: no-repeat;
+    background-color: var(--blue);
+    background-position: 0px 0px;
+    /* equivalent to 'top left' */
+    border: none;
+    /* assuming we don't want any borders */
+    cursor: pointer;
+    /* make the cursor like hovering over an <a> element */
+    height: 60px;
+    /* make this the size of your image */
+    font-size: 40px;
+    align-self: center;
+
+
+}
+
+
+
+input[id="address"],
+textarea {
+    background-color: VAR(--blue);
+    font-size: 30px;
+    width: 412px;
+}
+
+input[class="coopFormInput"],
+textarea {
+    padding-left: 0;
+    padding-right: 0;
+    width: 35px;
+}
+
+.search {
+    width: 100%;
+    max-width: 1000px;
+    border-radius: 150px;
+    border: 2px solid var(--dblue);
+    text-align: center;
+}
+
+
+.end {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    margin-left: -60px;
+    margin-top: 450px;
+}
+
+.chicken2 {
+    transform: scaleX(-1);
+}
+
+@media (max-width : 1920px) {
+    input {
+        padding-right: 150px;
+        padding-left: 150px;
+    }
+
+}
+
+@media (max-width: 1100px) {
+    .top>.logo {
+        justify-self: center;
+    }
+
+    .top {
+        grid-template-areas:
+            "logo"
+            "menu"
+    }
+
+    input {
+        padding-right: 150px;
+        padding-left: 150px;
+    }
+
+
+}
+
+@media (max-width: 940px) {
+    input {
+        padding-right: 6px;
+        padding-left: 6px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .top {
+        justify-items: center;
+    }
+
+    .end>img {
+        background-color: var(--blue);
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media (max-width: 750px) {
+    .end>img {
+        height: -100vh;
+    }
+
+}
+
+@media (max-width: 528px) {
+
+
+    .top {
+        grid-template-areas:
+            "logo"
+            "menu"
+
+    }
+
+    .menu {
+        justify-self: end;
+        margin-right: 5px;
+    }
+
+
+
+    .menu ul {
+        margin-right: 28vw;
+    }
+
+    .middle {
+        margin-top: 60px;
+    }
+
+    .end>img {
+        margin-left: 20px;
+    }
+
+}
+
+
+@media (max-width : 320px),
+screen and (max-height: 700px) {
+
+
+    .instructions {
+        font-size: 15px;
+        overflow: hidden;
+    }
+
+    input[type="text"],
+    textarea {
+        background-color: VAR(--blue);
+        font-size: 25px;
+        width: 290px;
+    }
+
+    input[class="coopFormInput"],
+    textarea {
+        padding-left: 0;
+        padding-right: 0;
+        width: 35px;
+    }
+
+    .menu a {
+        margin-left: 18vw;
+    }
+
+    .menu>* {
+        margin-left: 8vw;
+    }
+
+    ul {
+        margin-right: 10vw;
+    }
+
+
+
+    .end {
+        margin-top: 5px;
+    }
+
+    .end>img {
+        margin-top: 18px;
+    }
+
+    body {
+        padding-top: -500px;
+        top: 0;
+    },
+
+
 }
