--- a/app/style/main.css
+++ b/app/style/main.css
@@ -59,7 +59,7 @@ body {
   font-size: 25px;
 }
 
-.middle>* {
+.middle > * {
   grid-column: 2/-2;
 }
 
@@ -87,7 +87,6 @@ body {
   margin-top: auto;
   margin-bottom: auto;
   width: 65%;
-
 }
 
 .form {
@@ -95,7 +94,6 @@ body {
   vertical-align: middle;
   width: 100%;
 }
-
 
 #map-container {
   width: 100%;
@@ -135,7 +133,6 @@ button[type="submit"] {
   max-width: 680px;
 }
 
-
 input[id="address"],
 textarea {
   background-color: VAR(--blue);
@@ -144,7 +141,6 @@ textarea {
   font-size: 30px;
   width: 690px;
   margin-top: 20px;
-
 }
 
 input[class="coopFormInput"],
@@ -161,7 +157,6 @@ textarea {
   text-align: center;
 }
 
-
 .end {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
@@ -176,18 +171,13 @@ textarea {
   transform: scaleX(-1);
 }
 
-
-
 @media (max-width: 940px) {
-
   input[id="address"],
   textarea {
     background-color: VAR(--blue);
     font-size: 30px;
     width: 400px;
   }
-
-
 }
 
 @media (max-width: 800px) {
@@ -195,7 +185,7 @@ textarea {
     justify-items: center;
   }
 
-  .end>img {
+  .end > img {
     background-color: var(--blue);
     width: 100%;
     height: 100%;
@@ -206,12 +196,10 @@ textarea {
     background-color: VAR(--blue);
     font-size: 30px;
   }
-
-
 }
 
 @media (max-width: 750px) {
-  .end>img {
+  .end > img {
     height: -100vh;
   }
 
@@ -219,9 +207,7 @@ textarea {
   textarea {
     background-color: VAR(--blue);
     font-size: 30px;
-
   }
-
 }
 
 @media (max-width: 510px) {
@@ -244,7 +230,7 @@ textarea {
     margin-top: 60px;
   }
 
-  .end>img {
+  .end > img {
     margin-left: 20px;
   }
 
@@ -253,15 +239,9 @@ textarea {
     background-color: VAR(--blue);
     font-size: 30px;
   }
-
-
 }
 
-@media (max-width: 320px),
-screen and (max-height: 700px) {
-
-
-
+@media (max-width: 320px), screen and (max-height: 700px) {
   .instructions {
     margin-top: -50px;
     font-size: 15px;
@@ -275,7 +255,7 @@ screen and (max-height: 700px) {
     width: 290px;
   }
 
-  HEAD .instructions {
+  head .instructions {
     font-size: 15px;
     overflow: hidden;
   }
@@ -293,13 +273,11 @@ screen and (max-height: 700px) {
     width: 35px;
   }
 
-
-
   .menu a {
     margin-left: 18vw;
   }
 
-  .menu>* {
+  .menu > * {
     margin-left: 8vw;
   }
 
@@ -314,7 +292,6 @@ screen and (max-height: 700px) {
     width: 200px;
   }
 
-
   input[class="coopFormInput"],
   textarea {
     padding-left: 0;
@@ -326,7 +303,7 @@ screen and (max-height: 700px) {
     margin-left: 18vw;
   }
 
-  .menu>* {
+  .menu > * {
     margin-left: 8vw;
   }
 
@@ -338,18 +315,13 @@ screen and (max-height: 700px) {
     margin-top: 5px;
   }
 
-  .end>img {
+  .end > img {
     margin-top: 18px;
     height: 60px;
   }
-
-
 
   body {
     padding-top: -500px;
     top: 0;
   }
-
-
-
 }
