added disclaimer, fixed* submit button

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -83,7 +83,7 @@ body {
 }
 
 .address {
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
     margin-top: auto;
     margin-bottom: auto;
@@ -123,13 +123,12 @@ button[type="submit"] {
     height: 60px;
     /* make this the size of your image */
     font-size: 40px;
-    vertical-align: middle;
     margin-top: auto;
     margin-bottom: auto;
+    /*vertical-align: top;
+    display: inline;*/
 
 =======
-  display: inline-block;
-  align-items: middle;
   margin: 10px;
 }
 
@@ -153,6 +152,8 @@ button[type="submit"] {
   /* make this the size of your image */
   font-size: 40px;
   align-self: center;
+  vertical-align: top;
+  display: inline;
 }
 
 input[id="address"],
@@ -178,6 +179,8 @@ textarea {
   border-radius: 150px;
   border: 2px solid var(--dblue);
   text-align: center;
+  display: inline
+  vertical-align: top;
 }
 
 
