--- a/app/style/main.css
+++ b/app/style/main.css
@@ -132,7 +132,6 @@ button[type="submit"] {
   /*vertical-align: top;
     display: inline;*/
 
-  =======margin: 10px;
 }
 
 .form {
@@ -187,13 +186,11 @@ textarea {
 
 
 .end {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  text-align: center;
   bottom: 0;
   width: 100%;
   margin-top: 11vh;
   height: 100px;
-
 }
 
 .chicken2 {
@@ -249,7 +246,6 @@ textarea {
 
   .end>img {
     background-color: var(--blue);
-    width: 100%;
     height: 100%;
   }
 
@@ -269,7 +265,11 @@ textarea {
     textarea {
       background-color: VAR(--blue);
       font-size: 30px;
-      width: 800px;
+      width: 100%;
+    }
+
+    .address {
+      width: 100%;
     }
 
   }
@@ -315,13 +315,6 @@ textarea {
       overflow: hidden;
     }
 
-    input[type="text"],
-    textarea {
-      background-color: VAR(--blue);
-      font-size: 25px;
-      width: 290px;
-    }
-
     .instructions {
       font-size: 15px;
       overflow: hidden;
@@ -330,8 +323,8 @@ textarea {
     input[type="text"],
     textarea {
       background-color: VAR(--blue);
-      font-size: 25px;
-      width: 620px;
+      font-size: 18px;
+      width: 100%;
     }
 
     input[class="coopFormInput"],
@@ -385,5 +378,9 @@ textarea {
     body {
       padding-top: -500px;
       top: 0;
+    }
+    button[type="submit"] {
+      height: 30px;
+      font-size: 30px;
     }
   }
