--- a/app/style/main.css
+++ b/app/style/main.css
@@ -83,6 +83,9 @@ body {
 }
 .middle p{
   text-align: center;
+  width: 80%;
+  margin: 0px auto;
+  padding: 10px 0px;
 }
 .instructions h2{
   display: block;
@@ -107,7 +110,7 @@ body {
   display: block;
   margin: 0px auto;
   text-align: center;
-  width: 100%;
+  width: 90%;
   max-width: 800px;
 }
 
@@ -128,26 +131,21 @@ button[type="submit"] {
   background-repeat: no-repeat;
   background-color: var(--blue);
   background-position: 0px 0px;
-  /* equivalent to 'top left' */
+  padding: 1.4rem;
   border: none;
-  /* assuming we don't want any borders */
   cursor: pointer;
-  /* make the cursor like hovering over an <a> element */
   height: 60px;
-  /* make this the size of your image */
   font-size: 2.2rem;
   line-height: 3rem;
   margin-top: auto;
   margin-bottom: auto;
-  /*vertical-align: top;
-    display: inline;*/
-
 }
 
 input[id="address"],
 textarea {
   background-color: VAR(--blue);
   font-size: 2rem;
+  line-height: 3rem;
   background-color: VAR(--blue);
 }
 
