--- a/app/style/main.css
+++ b/app/style/main.css
@@ -29,6 +29,7 @@ body {
   grid-area: logo;
   align-self: center;
   text-transform: uppercase;
+  margin-top: 20px;
 }
 
 .logo h1 {
@@ -68,6 +69,9 @@ body {
   color: var(--black);
   text-transform: uppercase;
   font-size: 25px;
+}
+.menu a:hover {
+  color: var(--orange);
 }
 
 .middle>* {
